--- a/workshop1/w0.html
+++ b/workshop1/w0.html
@@ -12,8 +12,8 @@
 
 Is
 
-  <a href = "view-source:http://bardcollege.github.io/workshop1/w0.html">Code</a>
+  <a href = "view-source:http://bardcollege.github.io/workshop1/w0.html">language</a>
 
-    <code>Language</code>?
+    <code>code</code>?
 
       <a href = "w1.html">--></a>  
