--- a/workshop1/w0.html
+++ b/workshop1/w0.html
@@ -10,10 +10,10 @@
      https://developer.mozilla.org/en-US/Learn/HTML/Introduction_to_HTML/Getting_started
 -->
 
-Is
+is
 
   <a href = "view-source:http://bardcollege.github.io/workshop1/w0.html">language</a>
 
-    <code>code</code>?
+    <code>code</code>?!
 
       <a href = "w1.html">--></a>  
