--- a/workshop1/w0.html
+++ b/workshop1/w0.html
@@ -17,6 +17,6 @@ is
 
   <a href = "view-source:http://bardcollege.github.io/workshop1/w0.html">language</a>
 
-    <code>code</code>?!
+    <code>a code</code>?!
 
       <a href = "w1.html">--></a>  
