--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -66,6 +66,11 @@
   &mdash; <a href = "https://en.wikipedia.org/wiki/Ludwig_Wittgenstein">Ludwig Wittgenstein</a>
 </blockquote>
 
+<blockquote>
+     "He who knows no foreign languages knows nothing of his own."
+     &mdash; <a href = "https://en.wikipedia.org/wiki/Johann_Wolfgang_von_Goethe">Johann Wolfgang von Goethe</a>
+</blockquote>
+
 <br><br><hr>
 
 <a href = "w0.html">previous</a> |
